<resources>
    <string name="app_name">Movie Library</string>
    <string name="menu_home">Home</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_tv">Tv</string>
    <string name="menu_user">User</string>
    <string name="loading_data">Loading data please wait</string>
    <string name="loading_error">Cannot load data</string>
    <string name="refresh">Refresh</string>
    <string name="popularity">Popularity</string>
    <string name="status">Status</string>
    <string name="genres">Genres</string>
    <string name="countries">Countries</string>
    <string name="language">Language</string>
    <string name="companies">Companies</string>
    <string name="similar_movies">Similar movies</string>
    <string name="recommended_movies">Recommended movies</string>
    <string name="type_for_search">Type for search</string>
    <string name="movies">Movies</string>
    <string name="tv">TV</string>
    <string name="person">Person</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">I forgot password</string>
    <string name="sign_up">Sign up</string>
    <string name="login_to_short">Login to short</string>
    <string name="login_empty">Login cannot be empty</string>
    <string name="password_to_short">Password to short</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="not_same_password">Passwords do not match</string>
    <string name="error_title">Sorry</string>
    <string name="error_user_already_exist">Current user already exist</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_register">Register</string>
    <string name="dialog_forgot_password">Forgot password</string>
    <string name="login_error_dialog_title">Ups</string>
    <string name="login_error_description">Bad login password, if You don\'t have account click register</string>
    <string name="popular_title">Popular</string>
    <string name="top_rated_title">Top rated</string>
    <string name="now_playing_title">Now playing</string>
    <string name="upcoming_title">Upcoming</string>
    <string name="airing_today_title">Airing today</string>
    <string name="the_air_title">The air</string>
    <string name="reviews">Reviews</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="user_rating">User rating: %d</string>
    <string name="user_rating_">User rating:</string>
    <string name="movies_title">Movies</string>
    <string name="birthday">Birthday:</string>
    <string name="deathday">Deathday:</string>
    <string name="placeOfBirth">Place of birth:</string>
    <string name="other_images">Other images</string>
    <string name="movie_cast">In other movies: </string>
    <string name="tv_cast">In other tv:</string>
    <string name="first_air_date">First air date: </string>
    <string name="last_air_date">Last air date: </string>
    <string name="total_season">Total seasons: </string>
    <string name="total_episodes">Total episodes: </string>
    <string name="episodes">%d episodes</string>
    <string name="season_title">Seasons</string>
</resources>
