<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textStyle="bold|italic"
        android:textSize="48sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/title"
        android:hint="@string/login" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/input_login"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/input_password"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:padding="16dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

</RelativeLayout>