<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/poster"
            android:layout_width="150dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:scaleType="fitXY"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movies_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movies_recycle_view" />

        <me.tankery.lib.circularseekbar.CircularSeekBar
            android:id="@+id/rating"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:cs_circle_stroke_width="5dp"
            app:cs_circle_style="butt"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/rating"
            app:layout_constraintEnd_toEndOf="@+id/rating"
            app:layout_constraintStart_toStartOf="@+id/rating"
            app:layout_constraintTop_toTopOf="@+id/rating" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/popularity_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/popularity"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintLeft_toRightOf="@id/rating"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/rating"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popularity_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/genres_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/genres"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintLeft_toRightOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/rating" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/genres_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/genres_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/countries_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/countries"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintLeft_toRightOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/genres_list" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/countries_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/countries_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/language_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/language"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/language_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="@id/language_title"
            app:layout_constraintTop_toBottomOf="@id/language_title" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="genres_title,title,genres_list,popularity_title,language_list,countries_list,countries_title,rating,popularity,poster,vote_average,language_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/similar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/similar_movies"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similar_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:scrollbars="horizontal"
            app:layout_constraintTop_toBottomOf="@id/similar_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/recommended_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/recommended_movies"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/similar_recycle_view"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:scrollbars="horizontal"
            app:layout_constraintTop_toBottomOf="@id/recommended_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/companies_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/companies"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recommended_recycle_view" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/companies_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companies_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>